fix contrast issue on the quote

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -118,7 +118,7 @@ body {
 			line-height: 1.2em;
 			color: #3b81ff;
 			font-style: italic;
-			background-color: rbga(0, 0, 0, 0.8);
+			background-color: rgba(0, 0, 0, 0.7);
 
 			&:before,
 			&:after {
